Partners in the footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,30 +3,23 @@
         <div class="columns">
             <h2>Projekt Demagog.cz podporují:</h2>
             <div class="partners">
-                <a title="Nadace Open Society Fund Praha" href="http://www.osf.cz/">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/osf_praha_cz.png") %>" />
-                </a>
-                <a title="Náš stát.cz" href="http://nasstat.cz">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/nas-stat-banner.png") %>" />
-                </a>
-                <a title="Jde o Evropu" href="http://europa.eu/citizens-2014">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/jde-o-evropu.png") %>" />
-                </a>
                 <a title="US Embassy" href="https://cz.usembassy.gov">
                     <img class="lazy-load" data-src="<%= asset_path("partners/us-embassy.png") %>" />
                 </a>
-                <br>
-                <a title="Program Mládež v akci" href="http://mladezvakci.cz">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/mladez-v-akci.png") %>" />
+                <a title="Nadační fond rodiny Orlických" href="http://www.nfro.cz">
+                    <img class="lazy-load" data-src="<%= asset_path("partners/nfro.png") %>" />
                 </a>
-                <a title="Zastoupení Evropské komise v ČR" href="http://ec.europa.eu/ceskarepublika/index_cs.htm">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/logo_rep_cz_fullcolor.png") %>" />
+                <a title="International Visegrad Fund" href="http://visegradfund.org/home/">
+                    <img class="lazy-load" data-src="<%= asset_path("partners/logo_ivf.png") %>" />
                 </a>
-                <a title="Fakulta sociálních studií MU" href="http://www.fss.muni.cz">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/logo_fss.png") %>" />
-                </a>
+            </div>
+            <h2>Projekt Demagog.cz spolupracuje s:</h2>
+            <div class="partners">
                 <a title="Zákony pro lidi" href="http://www.zakonyprolidi.cz">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/z4-logo-32.png") %>" />
+                    <img class="lazy-load" data-src="<%= asset_path("partners/zakony-pro-lidi.png") %>" />
+                </a>
+                <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
+                    <img class="lazy-load" data-src="<%= asset_path("partners/newton-media.png") %>" />
                 </a>
             </div>
 
