Basic OG support

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %} %>
     <!--[if IE 8]><link rel="stylesheet" href="./static/css/ie8-grid-foundation-4.css" type="text/css" media="screen" ><![endif]-->
+    <%= render partial: "shared/og" %>
   </head>
 
   <body>
