Darujme.cz widget title

--- a/app/views/homepage/_interesting_statements.html.erb
+++ b/app/views/homepage/_interesting_statements.html.erb
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="large-4 medium-6 columns">
-      <h2 style="margin:0">&nbsp;</h2>
+      <h2 style="margin-left: 10px">Podpořte Demagog.cz</h2>
       <div data-darujme-widget-token="cal3h1ohu4dkri5u">&nbsp;</div>
       <script type="text/javascript">
         +function(w, d, s, u, a, b) {
