Update slugs for header

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -29,9 +29,9 @@
               <a href="<%= article_path("o-nas") %>">O nás</a>
               <ul class="dropdown">
                 <li><a href="<%= article_path("o-nas") %>">O Demagog.cz</a></li>
-                <li><a href="<%= article_path("jak-hodnotime") %>">Jak hodnotíme?</a></li>
-                <li><a href="<%= article_path("eticky-kodex") %>">Etický kodex</a></li>
-                <li><a href="<%= article_path("nabizime-workshopy") %>">Nabízíme workshopy</a></li>
+                <li><a href="<%= article_path("jak-hodnotime-metodika") %>">Jak hodnotíme?</a></li>
+                <li><a href="<%= article_path("eticky-kodex-demagogcz") %>">Etický kodex</a></li>
+                <li><a href="<%= article_path("workshopy-demagogcz") %>">Nabízíme workshopy</a></li>
                 <li><hr></li>
                 <!-- <li><a href="<%= article_path("financovani") %>">Financování</a></li> -->
                 <li><a href="<%= article_path("czech-this-out") %>">Czech this out!</a></li>
