--- a/app/views/speaker/show.html.erb
+++ b/app/views/speaker/show.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <div class="large-10 columns">
-        <h1 class="s-speaker-name"><%= @speaker.full_name %> (<%= @speaker.party.short_name %>)</h1>
+        <h1 class="s-speaker-name"><%= @speaker.full_name %> <% if @speaker.party %>(<%= @speaker.party.short_name %>)<% end %></h1>
 
         <p class="politicianStats">
             <span title="Pravda" class="veracity true">
