--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -24,7 +24,7 @@
         partial: "shared/speaker_stat",
         locals: {
           speaker: @statement.speaker,
-          stats: @statement.speaker.stats
+          stats: @stats
         }
       )
     %>
