--- a/app/views/article/_preview.html.erb
+++ b/app/views/article/_preview.html.erb
@@ -54,7 +54,7 @@
                     <% end %>
                 </span>
 
-                <% if (article.article_type.name == "default" and article.source) %>
+                <% if article.article_type.name == "default" and article.source %>
                     <i><%= article.source.medium.name %></i>,
                 <% end %>
 
