--- a/app/assets/stylesheets/_general.scss
+++ b/app/assets/stylesheets/_general.scss
@@ -8,6 +8,10 @@ body {
   padding-top: 2em;
 }
 
+body.f-topbar-fixed {
+  margin-top: 2rem + $topbar-height;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: "Lato", sans-serif;
   font-weight: bold;
