--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -233,20 +233,20 @@ $xlarge-breakpoint: em-calc(1920);
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-$h1-font-size: rem-calc(32);
-$h2-font-size: rem-calc(28);
-$h3-font-size: rem-calc(24);
-$h4-font-size: rem-calc(18);
+$h1-font-size: rem-calc(24);
+$h2-font-size: rem-calc(20);
+$h3-font-size: rem-calc(16);
+$h4-font-size: rem-calc(14);
 $h5-font-size: rem-calc(14);
 $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
-// $h1-font-reduction: rem-calc(10);
-// $h2-font-reduction: rem-calc(10);
-// $h3-font-reduction: rem-calc(5);
-// $h4-font-reduction: rem-calc(5);
-// $h5-font-reduction: 0;
-// $h6-font-reduction: 0;
+$h1-font-reduction: 0;
+$h2-font-reduction: 0;
+$h3-font-reduction: 0;
+$h4-font-reduction: 0;
+$h5-font-reduction: 0;
+$h6-font-reduction: 0;
 
 // These control how subheaders are styled.
 // $subheader-line-height: 1.4;
