--- a/app/assets/stylesheets/_speaker.scss
+++ b/app/assets/stylesheets/_speaker.scss
@@ -25,7 +25,7 @@
   .name {
     margin-top: 0;
     font-family: "Lato", sans-serif;
-    font-size: 24px;
+    font-size: $h4-font-size;
     font-weight: bold;
   }
 }
