--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -1422,6 +1422,7 @@ $topbar-bg: $topbar-bg-color;
 // Height and margin
 // $topbar-height: rem-calc(45);
 // $topbar-margin-bottom: 0;
+$topbar-height: rem-calc(65);
 
 // Controlling the styles for the title in the top bar
 // $topbar-title-weight: $font-weight-normal;
