--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -25,8 +25,14 @@
                     <img class="lazy-load" data-src="<%= asset_path("partners/newton-media.png") %>" />
                 </a>
             </div>
+        </div>
+    </div>
 
-            <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Tomešova 568/6, Staré Brno, 602 00 Brno zapsaný ve spolkovém rejstříku u Krajského soudu v Brně. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
+    <div class="attribution">
+        <div class="row">
+            <div class="columns">
+                <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Tomešova 568/6, Staré Brno, 602 00 Brno zapsaný ve spolkovém rejstříku u Krajského soudu v Brně. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
+            </div>
         </div>
     </div>
 </footer>
