Two-column partners

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
     <div class="row">
-        <div class="columns">
+        <div class="columns large-6">
             <h2>Projekt Demagog.cz podporují:</h2>
             <div class="partners">
                 <a title="US Embassy" href="https://cz.usembassy.gov">
@@ -13,6 +13,8 @@
                     <img class="lazy-load" data-src="<%= asset_path("partners/logo_ivf.png") %>" />
                 </a>
             </div>
+        </div>
+        <div class="columns large-6">
             <h2>Projekt Demagog.cz spolupracuje s:</h2>
             <div class="partners">
                 <a title="Little Gretta" href="http://littlegreta.co.uk/">
