Less intense dropdown arrows

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -1479,8 +1479,8 @@ $topbar-dropdown-link-color-hover: $topbar-link-color-hover;
 $topbar-dropdown-link-bg: $violet;
 $topbar-dropdown-link-bg-hover: $orange;
 $topbar-dropdown-link-weight: $font-weight-normal;
-$topbar-dropdown-toggle-color: $violet;
-$topbar-dropdown-toggle-alpha: 1;
+$topbar-dropdown-toggle-color: $aluminum;
+$topbar-dropdown-toggle-alpha: .7;
 
 
 
