--- a/app/assets/stylesheets/_article.scss
+++ b/app/assets/stylesheets/_article.scss
@@ -41,9 +41,8 @@ article {
 article.preview {
   margin-top: 40px;
 
-  h1 {
-    font-size: rem-calc(28);
-    margin: -9px 0 10px;
+  h2 {
+    margin: 0 0 10px;
     text-align: left;
   }
   .speakers {
@@ -72,6 +71,16 @@ article.preview {
     &.default {  color: $blue; }
     &.static { color: $orange; }
   }
+
+  .show-for-medium-up img {
+    width: calc(100% + #{$column-gutter / 2});
+    max-width: calc(100% + #{$column-gutter / 2});
+  }
+}
+
+p.lead {
+  font-size: $paragraph-font-size + rem-calc(0.5);
+  line-height: inherit;
 }
 
 
