--- a/app/assets/stylesheets/_general.scss
+++ b/app/assets/stylesheets/_general.scss
@@ -1,11 +1,15 @@
 body, html {
   background: $white;
-  color: $black;
+  color: $dark;
   font-family: "Lato", sans-serif;
 }
 
 body {
   padding-top: 2em;
+}
+
+body.f-topbar-fixed {
+  margin-top: 2rem + $topbar-height;
 }
 
 h1, h2, h3, h4, h5 {
@@ -14,7 +18,7 @@ h1, h2, h3, h4, h5 {
   letter-spacing: 0.025em;
   margin-top: 1em;
   margin-bottom: 0.5em;
-  color: $black;
+  color: $violet;
 }
 
 p, li, blockquote, div {
@@ -44,25 +48,46 @@ header.page-header h1 {
 
 nav.top-bar {
   margin: 2em 0;
+  z-index: 1;
 
   .name {
     margin-left: -2px;
     .alt { display: none; }
     img { height: 48px; }
   }
-  .button {
-    font-family: "Lato", sans-serif;
-    background: $black;
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
   .has-dropdown a:hover {
     background-color: $orange !important;
   }
 
+  input, .button {
+    height: 2rem;
+    line-height: 2rem;
+    padding: 0;
+    top: 16px;
+
+    border: 1px solid $aluminum;
+    background: $white;
+    
+    color: $jumbo;
+    font-family: "Lato", sans-serif;
+    text-transform: uppercase;
+  }
+
+  input { 
+    border-right: 0; 
+    color: $steel;
+    padding: 0 0.5rem;
+  }
+  .button { background: $silver; }
+
+  @media (min-width: $medium-breakpoint) {
+    transition: transform 0.2s ease-in-out;
+    transform: translate(0, 0);
+  }
 
   @media (max-width: $medium-breakpoint) {
     margin: 0 0 2em;
+    transform: translate(0, 0);
 
     .name img {
       height: 36px;
@@ -81,6 +106,11 @@ nav.top-bar {
   .name { visibility: visible;
     img { height: 32px; }
   }
+
+  @media (min-width: $medium-breakpoint) {
+    margin-top: -80px;
+    transform: translate(0, 80px);
+  }
 }
 
 .social {
@@ -90,16 +120,20 @@ nav.top-bar {
 
 footer {
   margin-top: 40px;
-  padding: 40px 0;
+  padding: 40px 0 0;
 
   h2 { margin: 0; }
 
   p, .partners { margin: 40px 0; }
 
   .partners img {
-    max-width: 188px;
-    max-height: 100px;
+    max-width: 115px;
+    max-height: 60px;
     margin: 0px 30px 50px 0;
+  }
+
+  .attribution {
+    @include inverted;
   }
 }
 
@@ -114,7 +148,7 @@ footer {
   }
 
   .current-page {
-    background-color: $black;
+    background-color: $violet;
     color: $white;
   }
 }
@@ -173,7 +207,11 @@ footer {
 }
 
 input[type="text"] {
-  border: 0.5px solid $black;
+  border: 0.5px solid $dark;
+
+  &:focus {
+    border-color: $violet;
+  }
 }
 
 
