--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
     <div class="row">
-        <div class="columns">
+        <div class="columns large-6">
             <h2>Projekt Demagog.cz podporují:</h2>
             <div class="partners">
                 <a title="US Embassy" href="https://cz.usembassy.gov">
@@ -13,6 +13,8 @@
                     <img class="lazy-load" data-src="<%= asset_path("partners/logo_ivf.png") %>" />
                 </a>
             </div>
+        </div>
+        <div class="columns large-6">
             <h2>Projekt Demagog.cz spolupracuje s:</h2>
             <div class="partners">
                 <a title="Little Gretta" href="http://littlegreta.co.uk/">
@@ -25,8 +27,14 @@
                     <img class="lazy-load" data-src="<%= asset_path("partners/newton-media.png") %>" />
                 </a>
             </div>
+        </div>
+    </div>
 
-            <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Tomešova 568/6, Staré Brno, 602 00 Brno zapsaný ve spolkovém rejstříku u Krajského soudu v Brně. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
+    <div class="attribution">
+        <div class="row">
+            <div class="columns">
+                <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Tomešova 568/6, Staré Brno, 602 00 Brno zapsaný ve spolkovém rejstříku u Krajského soudu v Brně. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
+            </div>
         </div>
     </div>
 </footer>
