Darujme widget fixes

--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -58,6 +58,7 @@
 @import "article";
 @import "statement";
 @import "speaker";
+@import "darujme";
 
 // identify & remove
 .explanation, .editorial {
