--- a/app/views/homepage/_interesting_statements.html.erb
+++ b/app/views/homepage/_interesting_statements.html.erb
@@ -1,6 +1,6 @@
-<section class="interesting-statements show-for-medium-up">
+<section class="interesting-statements">
   <div class="row">
-    <div class="large-8 medium-6 columns">
+    <div class="large-8 medium-6 columns show-for-medium-up">
       <h2>Vybrané výroky z posledních debat</h2>
 
       <div class="row">
@@ -12,8 +12,11 @@
         <% end %>
       </div>
     </div>
-    <div class="large-4 medium-6 columns">
-      <h2 style="margin-left: 10px">Podpořte Demagog.cz</h2>
+    <div id="darujme-widget" class="large-4 medium-6 columns">
+      <h2>Podpořte Demagog.cz</h2>
+
+      <p class="disclaimer">Demagog.cz není finančně ani jinak navázán na žádnou politickou stranu či politickou zájmovou skupinu. Pro zajištění nezávislosti a udržitelnosti je financován z více zdrojů.  Jednorázovým či pravidelným příspěvkem můžete pomoci Demagog.cz také vy.</p>
+
       <div data-darujme-widget-token="cal3h1ohu4dkri5u">&nbsp;</div>
       <script type="text/javascript">
         +function(w, d, s, u, a, b) {
