Medium sized cover story

--- a/app/views/homepage/_cover_story.html.erb
+++ b/app/views/homepage/_cover_story.html.erb
@@ -7,7 +7,7 @@
             <%= link_to(@cover_story.title, article_path(@cover_story)) %>
           </h1>
         </div>
-        <div class="perex large-5 columns">
+        <div class="perex large-5 medium-7 columns">
           <p>
             <%= strip_tags(@cover_story.perex) %>
             <a href="<%= article_path(@cover_story) %>">
@@ -28,7 +28,7 @@
         </div>
 
         <% if @cover_story.illustration %>
-          <div class="perex large-7 columns">
+          <div class="perex large-7 medium-5 columns">
             <p>
               <%= image_tag(article_illustration(@cover_story.illustration, @cover_story.article_type.name)) %>
             </p>
@@ -42,7 +42,7 @@
               <%= link_to(@cover_story.title, article_path(@cover_story)) %>
           </h1>
         </div>
-        <div class="perex large-8 columns">
+        <div class="perex large-8 medium-5 columns">
           <% if @cover_story.illustration %>
             <p>
               <%= image_tag(article_illustration(@cover_story.illustration, @cover_story.article_type.name)) %>
@@ -56,7 +56,7 @@
             </a>
           </p>
         </div>
-        <div class="perex large-4 columns">
+        <div class="perex large-4 medium-7 columns">
           <% @cover_story.unique_speakers.each do |speaker| %>
             <%= render(
               partial: "shared/speaker_stat",
