--- a/app/views/speaker/show.html.erb
+++ b/app/views/speaker/show.html.erb
@@ -32,17 +32,17 @@
 </div>
 
 <div class="row">
-    <div class="columns">
-        <h2 id="statements">Výroky</h2>
-        <div class="filters">
-            <p>
-              <%= form_tag(speaker_path(@speaker), method: "GET") do %>
-                <%= select_tag(:veracity, options_from_collection_for_select(@veracities, "id", "name", params[:veracity])) %>
-                <%= submit_tag("Filtrovat") %>
-              <% end %>
-            </p>
-        </div>
+  <div class="columns medium-6">
+    <h2 id="statements">Výroky</h2>
+    <div class="filters row collapse">
+      <div class="small-8 columns">
+        <%= select_tag(:veracity, options_from_collection_for_select(@veracities, "id", "name", params[:veracity])) %>
+      </div>
+      <div class="small-4 columns">
+        <%= submit_tag("Filtrovat", class: "button postfix") %>
+      </div>
     </div>
+  </div>
 </div>
 
 <div class="speakers-details-statements">
