--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -30,10 +30,12 @@
               <ul class="dropdown">
                 <li><a href="<%= article_path("o-nas") %>">O Demagog.cz</a></li>
                 <li><a href="<%= article_path("jak-hodnotime-metodika") %>">Jak hodnotíme?</a></li>
+                <li><a href="<%= article_path("mam-vyhradu-k-hodnoceni-nebo-navrh-na-overeni-kam-se-mohu-obra") %>">Výtky k hodnocení</a></li>
+                <li><a href="<%= article_path("jak-je-projekt-demagogcz-financovan") %>">Naše financování</a></li>
                 <li><a href="<%= article_path("eticky-kodex-demagogcz") %>">Etický kodex</a></li>
-                <li><a href="<%= article_path("workshopy-demagogcz") %>">Nabízíme workshopy</a></li>
+                <li><a href="<%= article_path("kontakty") %>">Kontakty</a></li>
                 <li><hr></li>
-                <!-- <li><a href="<%= article_path("financovani") %>">Financování</a></li> -->
+                <li><a href="<%= article_path("workshopy-demagogcz") %>">Nabízíme workshopy</a></li>
                 <li><a href="<%= article_path("czech-this-out") %>">Czech this out!</a></li>
               </ul>
             </li>
