--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -10,8 +10,11 @@
   viewport: 'width=device-width, initial-scale=1',
   'theme-color': '#f04124',
   charset: 'utf-8',
-  image_src: defined?(@article) ? 
-      article_illustration(@article.illustration, @article.article_type.name) : 
+  alternate: [
+    { href: rss_index_path(format: :atom), type: 'application/rss+xml', title: 'RSS' },
+  ],
+  image_src: defined?(@article) ?
+      article_illustration(@article.illustration, @article.article_type.name) :
       asset_path("apple-touch-icon.png"),
   icon: [
     { href: asset_path('favicon.png'), sizes: '64x64', type: 'image/png' },
