Added missing og:description

--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -23,6 +23,7 @@
   og: {
     title: :title,
     site_name: :site,
+    description: :description,
     type: 'article',
     url: url_for(:only_path => false),
     image: :image_src,
