Added IFCN badge

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -28,6 +28,20 @@
                 </a>
             </div>
         </div>
+        <div class="columns">
+          <h2>Práce projektu Demagog.cz je ověřena International Fact-Checking Network</h2>
+          <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="b23c71e2-230f-4d9b-94d2-b58c46339200"></div>
+          <script type="text/javascript">
+            (function() {
+              var s = document.createElement('script');
+              s.type = 'text/javascript';
+              s.async = true;
+              s.src = 'https://cdn.youracclaim.com/assets/utilities/embed.js';
+              var o = document.getElementsByTagName('script')[0];
+              o.parentNode.insertBefore(s, o);
+              })();
+          </script>
+        </div>
     </div>
 
     <div class="attribution">
