--- a/app/assets/stylesheets/_speaker.scss
+++ b/app/assets/stylesheets/_speaker.scss
@@ -41,7 +41,7 @@
     .name {
       margin: 0 0 0 75px;
       padding-top: 2px;
-      font-size: rem-calc(20);
+      font-size: 20px;
     }
     
     .photo-wrapper {
@@ -54,7 +54,7 @@
   .stats {
     margin: -2px 0 2.5em 75px;
     font-weight: bold;
-    font-size: rem-calc(20);
+    font-size: 20px;
     
     li {
       list-style: none;
