--- a/app/assets/stylesheets/_article.scss
+++ b/app/assets/stylesheets/_article.scss
@@ -86,7 +86,7 @@ article.preview {
 }
 
 p.lead {
-  font-size: $paragraph-font-size + rem-calc(0.5);
+  font-size: 1.1rem;
   line-height: inherit;
 }
 
