HTML restructured in shared views

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,51 +1,3 @@
-<footer>
-    <div class="row">
-        <div class="columns large-6">
-            <h2>Projekt Demagog.cz podporují:</h2>
-            <div class="partners">
-                <a title="US Embassy" href="https://cz.usembassy.gov">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/us-embassy.png") %>" />
-                </a>
-                <a title="International Visegrad Fund" href="http://visegradfund.org/home/">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/logo_ivf.png") %>" />
-                </a>
-            </div>
-        </div>
-        <div class="columns large-6">
-            <h2>Projekt Demagog.cz spolupracuje s:</h2>
-            <div class="partners">
-                <a title="Little Gretta" href="http://littlegreta.co.uk/">
-                  <img class="lazy-load" data-src="<%= asset_path('partners/little-greta.svg') %>" />
-                </a>
-                <a title="Zákony pro lidi" href="http://www.zakonyprolidi.cz">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/zakony-pro-lidi.png") %>" />
-                </a>
-                <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/newton-media.png") %>" />
-                </a>
-            </div>
-        </div>
-        <div class="columns">
-          <h2>Práce projektu Demagog.cz je ověřena International Fact-Checking Network</h2>
-          <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="b23c71e2-230f-4d9b-94d2-b58c46339200"></div>
-          <script type="text/javascript">
-            (function() {
-              var s = document.createElement('script');
-              s.type = 'text/javascript';
-              s.async = true;
-              s.src = 'https://cdn.youracclaim.com/assets/utilities/embed.js';
-              var o = document.getElementsByTagName('script')[0];
-              o.parentNode.insertBefore(s, o);
-              })();
-          </script>
-        </div>
-    </div>
-
-    <div class="attribution">
-        <div class="row">
-            <div class="columns">
-                <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Tomešova 568/6, Staré Brno, 602 00 Brno zapsaný ve spolkovém rejstříku u Krajského soudu v Brně. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
-            </div>
-        </div>
-    </div>
+<footer data-theme="dark">
+  <p>&copy; 2012&mdash;<%= Time.now.strftime("%Y") %> <b>Demagog.cz, z.s.</b> IČ: 05 14 05 44, se sídlem Tomešova 568/6, Staré Brno, 602 00 Brno zapsaný ve spolkovém rejstříku u Krajského soudu v Brně. Demagog.cz má <a href="https://www.rb.cz/cs/o-nas/povinne-uverejnovane-informace/transparentni-ucty?mvcPath=transactions&amp;accountNumber=9711283001">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
 </footer>
