--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,64 +1,3 @@
-<div class="row">
-  <div class="sticky"><nav class="top-bar" data-topbar role="navigation">
-    <ul class="title-area">
-        <li class="name">
-          <h1><a href="<%= root_path %>"><span class="alt">Demagog.cz </span><%= image_tag("demagog-logo-sub.svg", alt: "Demagog.cz") %></a></h1>
-        </li>
-        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-    </ul>
-
-    <section class="top-bar-section">
-        <ul class="right">
-            <li class="has-dropdown">
-                <a href="<%= speakers_path() %>">Přehledy</a>
-                <ul class="dropdown" data-dropdown-menu>
-                  <!-- <li><a href="{# statistiky #}">Výroky</a></li> -->
-                  <li><a href="<%= speakers_path() %>">Politici</a></li>
-                </ul>
-            </li>
-
-            <li class="has-dropdown">
-              <a>Speciály</a>
-              <ul class="dropdown">
-                <li><a href="https://extra.demagog.cz/vladni-sliby/">Vládní sliby 2014—17</a></li>
-                <li><a href="https://zpravy.aktualne.cz/domaci/zverejnujeme-velkou-inventuru-zemanovych-slibu-ktere-slovo-d/r~9ebe8728ff6911e7adc2ac1f6b220ee8/">Sliby Miloše Zemana</a></li>
-              </ul>
-            </li>
-
-            <li class="has-dropdown" data-dropdown-menu>
-              <a href="<%= article_path("o-nas") %>">O nás</a>
-              <ul class="dropdown">
-                <li><a href="<%= article_path("o-nas") %>">O Demagog.cz</a></li>
-                <li><a href="<%= article_path("jak-hodnotime-metodika") %>">Jak hodnotíme?</a></li>
-                <li><a href="<%= article_path("mam-vyhradu-k-hodnoceni-nebo-navrh-na-overeni-kam-se-mohu-obra") %>">Výtky k hodnocení</a></li>
-                <li><a href="<%= article_path("jak-je-projekt-demagogcz-financovan") %>">Naše financování</a></li>
-                <li><a href="<%= article_path("eticky-kodex-demagogcz") %>">Etický kodex</a></li>
-                <li><a href="<%= article_path("kontakty") %>">Kontakty</a></li>
-                <li><hr></li>
-                <li><a href="<%= article_path("workshopy-demagogcz") %>">Nabízíme workshopy</a></li>
-                <li><a href="<%= article_path("czech-this-out") %>">Czech this out!</a></li>
-              </ul>
-            </li>
-
-            <li class="has-form">
-                <form onsubmit="searchFn(); return false;">
-                    <script>
-                        function searchFn() {
-                            var q = document.getElementById('searchQuery').value;
-                            window.open('https://search.seznam.cz/?q=' + encodeURIComponent(q) + '+site%3Ademagog.cz', '_blank');
-                        }
-                    </script>
-                    <div class="row collapse">
-                        <div class="large-8 small-9 columns">
-                            <input id="searchQuery" type="text" placeholder="">
-                        </div>
-                        <div class="large-4 small-3 columns">
-                            <a href="#" class="button expand" onclick="searchFn(); return false;">Hledat</a>
-                        </div>
-                    </div>
-                </form>
-            </li>
-        </ul>
-    </section>
-  </nav></div>
-</div>
+<header>
+  <h1 aria-label="Demagog.cz"><a href="<%= root_path %>"><%= image_tag("demagog-logo-sub.svg", alt: "Demagog.cz") %></a></h1>
+</header>
